--- a/MapGenTM/MapGenTM.csproj
+++ b/MapGenTM/MapGenTM.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.9.1" />
       <PackageReference Include="GBX.NET" Version="2.0.4" />
       <PackageReference Include="GBX.NET.LZO" Version="2.0.0" />
       <PackageReference Include="Tomlyn" Version="0.17.0" />
