--- a/TMTemplateGen/TMTemplateGen.csproj
+++ b/TMTemplateGen/TMTemplateGen.csproj
@@ -14,4 +14,15 @@
       <PackageReference Include="Tomlyn" Version="0.17.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="Blank.Map.Gbx">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Include="Blocks.Map.Gbx">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Include="settings.toml">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
 </Project>
